[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plato-twin-maker"
version = "0.1.0"
description = "The hermit crab factory — creates PLATO-twin of any repository"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SuperInstance", email = "fleet@cocapn.ai"}
]
keywords = ["plato", "agent-fleet", "knowledge-management", "shell-factory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
ptwin = "plato_twin_maker.cli:main"

[project.urls]
Homepage = "https://github.com/SuperInstance/plato-twin-maker"
Repository = "https://github.com/SuperInstance/plato-twin-maker"
Issues = "https://github.com/SuperInstance/plato-twin-maker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["plato_twin_maker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]